--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <a href="#">About</a>
     <a href="#"> Labs </a>
     </div>
+    <i class="fa fa-bars"></i>
    </nav>
    
     <div class="section-1">
-   <h1 class="hero-title"> Techtronics<br> <span class="quote"> "Study Smartly" </span> </h1>
+   <h1 class="hero-title"> Techtronics<br> <span class="quote"> "Lets us Study Smartly" </span> </h1>
    <img src="assets/main3.png">
    </div> 
  
