added anchors about & resources page

--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
     <title>Techtronics</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-   
-   <nav class="navigation-bar">
-    <h1 class="logo" src="logo.png">  Techtronics</h1>
-    <div class="other">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#"> Labs </a>
-    </div>
-    <i class="fa fa-bars"></i>
-   </nav>
-   
-    <div class="section-1">
-   <h1 class="hero-title"> Techtronics<br> <span class="quote"> "Lets us Study Smartly" </span> </h1>
-   <img src="assets/main3.png">
-   </div> 
- 
-   
+    <nav class="navigation-bar">
+      <h1 class="logo" src="logo.png">Techtronics</h1>
+      <div class="other">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="#"> Labs </a>
+        <a href="resource.html">Resources</a>
+      </div>
+      <i class="fa fa-bars"></i>
+    </nav>
 
-
+    <section class="section-1">
+      <h1 class="hero-title">
+        Techtronics<br />
+        <span class="quote"> "Let us Study Smartly" </span>
+      </h1>
+      <img src="assets/main3.png" />
+    </section>
 
     
   </body>
