--- a/resource.html
+++ b/resource.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="215861507846-gia515jbhncolvmb0nmifmuunhdo2rj4.apps.googleusercontent.com">
     <link rel="stylesheet" href="css/index.css" />
     <title>Resources</title>
     
@@ -20,8 +21,12 @@
         <i class="fa fa-bars"></i>
       </nav>
       <section class="section-3">
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+
           
 
       </section>
+      <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 </html>
