--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       </nav>
 
       <!-- mohit's emergency code  do not touch-->
-      <!-- <section class="section-2" id="about">
+       <!-- <section class="section-2" id="about">
         <div class="about">
           <h1>About</h1>
           <p>
@@ -37,8 +37,8 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, illo sequi accusamus, a ex alias incidunt eos cupiditate ratione autem facilis, sed iste excepturi recusandae maxime illum eum animi dolor qui nisi? Cupiditate tenetur labore, excepturi est delectus consequatur ab rem ad voluptas consectetur? Libero adipisci obcaecati iusto ut, laboriosam, ad officia dignissimos neque fuga dolorem ab suscipit porro. Voluptas obcaecati iusto aliquid temporibus quibusdam itaque, voluptatum placeat, at nemo nisi impedit necessitatibus eligendi. Cum nemo commodi unde ea in necessitatibus atque ducimus eligendi laudantium a fugit odit, labore quo ipsum eaque, similique cupiditate fuga! Excepturi voluptate neque in eligendi!
           </p>
-        </div> -->
+        </div>
   
-      </section>
+      </section> -->
 </body>
 </html>
