feat: edited lab page(cards)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="other">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="#"> Labs </a>
+        <a href="labs.html"> Labs </a>
         <a href="resource.html">Resources</a>
       </div>
       <i class="fa fa-bars"></i>
