--- a/resource.html
+++ b/resource.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="215861507846-gia515jbhncolvmb0nmifmuunhdo2rj4.apps.googleusercontent.com">
     <link rel="stylesheet" href="css/res.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Resources</title>
     
 </head>
@@ -15,7 +16,7 @@
         <div class="other">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="#"> Labs </a>
+          <a href="labs.html"> Labs </a>
           <a href="resource.html">Resources</a>
         </div>
         <i class="fa fa-bars"></i>
