--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
+    
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <title>About</title>
     
@@ -15,7 +16,7 @@
       <div class="other">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="#"> Labs </a>
+        <a href="labs.html"> Labs </a>
         <a href="resource.html">Resources</a>
       </div>
       <i class="fa fa-bars"></i>
