feat: added project.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <a  href="index.html">Home</a>
         <a  href="about.html">About</a>
         <a href="labs.html"> Labs </a>
+        <a href="project.html"> Projects </a>
         <a href="resource.html">Resources</a>
+
       </div>
     </nav>
    
