--- a/labs.html
+++ b/labs.html
@@ -20,6 +20,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="labs.html"> Labs </a>
+          <a href="project.html"> Projects </a>
           <a href="resource.html">Resources</a>
         </div>
         <i class="fa fa-bars"></i>
