feat: (misc) modified about.html

--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@
             Along with the proficient knowledge of electronics, we are exploring the world of web development
             and trying best to be good at it.
           </p>
+          <p> This website is created by <a href="https://www.linkedin.com/in/mohit-khairnar/" target="_blank">Mohit Khairnar</a>,
+            <a href="https://www.linkedin.com/in/vinayak-chatterjee-b06331202/" target="_blank">Vinayak Chatterjee</a> and
+            <a href="" target="_blank">Akshay Rahangdale</a></p>
          
         </div>
        
