--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
         <li class="carousel__item" data-pos="-1">
           <img src="assets/cpr.png">
           <div class="text">CPR Trainer</div>
-          <div class="name">Ayush Shankarpurkar | Rishi Singh | Vinayak Agrawal</div>
+          <div class="name">Ayush Shankarpurkar | Rishi Singh | Vinayak Chatterjee</div>
          
         </li>
         <li class="carousel__item" data-pos="0">
