misc: css modifications

--- a/project.html
+++ b/project.html
@@ -34,7 +34,10 @@
     <div class="carousel">
       <ul class="carousel__list">
         <li class="carousel__item" data-pos="-2">
-          <div class="text">coming soon..</div>
+          <img src="assets/obstacle.png">
+          <div class="text">Obstacle avoiding vehicle</div>
+          <div class="name">Ayush Shankarpurkar</div>
+         
          
         </li>
         <li class="carousel__item" data-pos="-1">
