--- a/labs.html
+++ b/labs.html
@@ -46,23 +46,71 @@
     <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab corporis tenetur ipsa voluptate, voluptatem maxime ea quae aliquam minima voluptatum!</p>
     <button id="lab2btn" class="btn">Explore</button>
   </div>
+<div class="container">
   <div id="lab1">
     <div class="labs">
-      <h1> 1st</h1>
-     
-
+      <h1>First Year Labs </h1>
+    <h2>
+     <br> 
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp1/index.html">Resistor</a>
+     <br>  
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp2/index.html">Capacitor</a>
+     <br>  
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp3/index.html"> Inductor</a>
+     <br>  
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp4/index.html">Ohm's law</a>
+     <br>  
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp5/index.html">VI Characteristics of a Diode</a>
+     <br>  
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp6/index.html">Half Wave Rectification</a>
+     <br>  
+     <a href="http://vlabs.iitkgp.ernet.in/be/exp7/index.html"> Full Wave Rectification</a>
+    </h2> 
 
     </div>
   </div>
 
   <div id="lab2">
     <div class="labs">
-
-    </div>
-  </div>
+     <h1>Second Year Labs</h1> 
+     <h2>
+   <br>   
+  <a href="http://"> 121</a>
+  <br> 
+  <a href="http://">211</a>
+  <br> 
+  <a href="http://"> 121</a>
+  <br> 
+  <a href="http://">2222</a>
+  <br> 
+  <a href="http://">33232</a>
+  <br> 
+  <a href="http://">232232 </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
+  <br> 
+  <a href="http://"> </a>
  
+</h2> 
+    </div>
+  
+  </div>
 
-
+</div>
  
   </div>
   <script src="js/lab.js"></script>
