--- a/index.html
+++ b/index.html
@@ -45,35 +45,35 @@
     </div>
     <div class="icon">
       <div>
-        <a href="index.html" target="_blank">
+        <a href="index.html" >
           <img src="assets/Icons/Home.png" alt="HOME Icon">
         </a>
       </div>
       <div>
-        <a href="about.html" target="">
+        <a href="about.html" >
           <img src="assets/Icons/About.png" alt="About Icon"></a>
       </div>
       <div>
-        <a href="labs.html" target="_blank">
+        <a href="labs.html" >
           <img src="assets/Icons/Lab.png" alt="Lab Icon">
         </a>
       </div>
       <div>
-        <a href="resource.html" target="_blank">
+        <a href="resource.html">
           <img src="assets/Icons/Resources.png" alt="Resource Icon">
         </a>
       </div>
       <div>
-        <a href="project.html" target="_blank">
+        <a href="project.html">
           <img src="assets/Icons/Projects.png" alt="Project Icon">
         </a>
       </div>
     </div>
     <ul class="menu_type">
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">&ensp;About</a></li>
-      <li><a href="labs.html">&nbsp;&emsp;Lab</a></li>
-      <li><a href="resource.html">&nbsp;&nbsp;Resource</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="labs.html">Lab</a></li>
+      <li><a href="resource.html">Resource</a></li>
       <li><a href="project.html">Project</a></li>
     </ul>
 
