--- a/labs.html
+++ b/labs.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-signin-client_id" content="215861507846-gia515jbhncolvmb0nmifmuunhdo2rj4.apps.googleusercontent.com">
     <link rel="stylesheet" href="css/labs.css" />
-    <link rel="stylesheet" href="css/res.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/footer.css">
     
     <title>Labs</title>
     
 </head>
 <body>
-  <div class="homepage">
+
     <nav class="navigation-bar">
         <h1 class="logo" src="logo.png">Techtronics</h1>
         <div class="other">
@@ -111,8 +111,51 @@
 
 </div>
  
-  </div>
+
   <script src="js/lab.js"></script>
+  <footer>
+    <div class=Title>
+      <h2>Techtronics</h2>
+    </div>
+    <div class="icon">
+      <div>
+        <a href="index.html" >
+          <img src="assets/Icons/Home.png" alt="HOME Icon">
+        </a>
+      </div>
+      <div>
+        <a href="about.html" >
+          <img src="assets/Icons/About.png" alt="About Icon"></a>
+      </div>
+      <div>
+        <a href="labs.html" >
+          <img src="assets/Icons/Lab.png" alt="Lab Icon">
+        </a>
+      </div>
+      <div>
+        <a href="resource.html">
+          <img src="assets/Icons/Resources.png" alt="Resource Icon">
+        </a>
+      </div>
+      <div>
+        <a href="project.html">
+          <img src="assets/Icons/Projects.png" alt="Project Icon">
+        </a>
+      </div>
+    </div>
+    <ul class="menu_type">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="labs.html">Lab</a></li>
+      <li><a href="resource.html">Resource</a></li>
+      <li><a href="project.html">Project</a></li>
+    </ul>
+
+    <p>© 2021 Techtronics | All Rights Reserved</p>
+
+
+  </footer>
+
 
   
   
