feat: added animation to text

--- a/project.html
+++ b/project.html
@@ -68,10 +68,11 @@
 
     <div class="core-title">
       <h1>Technical Projects</h1>
-      <p> coming soon...</p>
-      
-    </div>
+      <p> Coming soon....</p>
   </div>
+
+
+
   <footer>
     <div class=Title>
       <h2>Techtronics</h2>
