links added for second year

--- a/labs.html
+++ b/labs.html
@@ -90,6 +90,8 @@
             <a href="http://vlabs.iitkgp.ernet.in/be/exp7/index.html">
               Full Wave Rectification</a
             >
+            <br />
+            <a href="http://octave-online.net/">Octave-online</a>
           </h2>
         </div>
       </div>
@@ -99,21 +101,43 @@
           <h1>Second Year Labs</h1>
           <h2>
             <br />
-            <a href="http://"> 121</a>
+            <a href="http://de-iitr.vlabs.ac.in/exp/truth-table-gates"
+              >Verification of Logics gate</a
+            >
             <br />
-            <a href="http://">211</a>
+            <a
+              href="http://vlabs.iitb.ac.in/vlabs-dev/labs/dldesignlab/experiments/implementation-multiplexer-using-msi/"
+              >implementation and Designing of 8:1 multiplexer</a
+            >
             <br />
-            <a href="http://"> 121</a>
+            <a
+              href="http://vlabs.iitb.ac.in/vlabs-dev/labs/dldesignlab/experiments/four-variable-function-pvg/"
+              >Design of four variable function using MSI ICs</a
+            >
             <br />
-            <a href="http://">2222</a>
+            <a
+              href="http://vlabs.iitb.ac.in/vlabs-dev/labs/dldesignlab/experiments/gray-to-binary-code-converter-pvg/index.html"
+              >Design of Gray to Binary code converter using MSI ICs</a
+            >
             <br />
-            <a href="http://">33232</a>
+            <a
+              href="http://vlabs.iitb.ac.in/vlabs-dev/labs/dldesignlab/experiments/binary-to-gray-code-converter-pvg/index.html "
+              >Design of Binary to Gray code converter using MSI ICs</a
+            >
             <br />
-            <a href="http://">232232 </a>
+            <a href="http://da-iitb.vlabs.ac.in/exp/washin-machine-control/ "
+              >Washing machine control using basic AND & NOT gates</a
+            >
             <br />
-            <a href="http://"> </a>
+            <a
+              href="http://vlabs.iitb.ac.in/vlabs-dev/labs/digital_application/experiments/industrial-control-pvg/index.html"
+            >
+              Basics of OR gate and its application in industrial control</a
+            >
             <br />
-            <a href="http://"> </a>
+            <a href="https://de-iitr.vlabs.ac.in/exp/half-full-adder/"
+              >Construction of half/ full adder using XOR and NAND gates
+            </a>
             <br />
             <a href="http://"> </a>
             <br />
