new links added and some color changes

--- a/labs.html
+++ b/labs.html
@@ -62,7 +62,7 @@
         <div class="labs">
           <h1>First Year Labs</h1>
           <h2>
-            <br />
+            
             <a href="http://vlabs.iitkgp.ernet.in/be/exp1/index.html"
               >Resistor</a
             >
@@ -92,6 +92,23 @@
             >
             <br />
             <a href="http://octave-online.net/">Octave-online</a>
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=189&sim=1519&cnt=4">Michelson's Interferometer - Refractive index of glass plate</a> 
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=189&sim=1520&cnt=1">Newton's Rings-Refractive index of liquid</a> 
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=189&sim=1106&cnt=1">Michelson's Interferometer- Wavelength of laser beam</a> 
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=189&sim=342&cnt=1">Laser beam divergence and spot size</a> 
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=189&sim=335&cnt=1">Newton's Rings-Wavelength of light</a> 
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=189&sim=343&cnt=1">Numerical Aperture of Optical Fiber</a> 
+            <br />
+            <a href="https://vlab.amrita.edu/?sub=1&brch=195&sim=840&cnt=1">	
+              Photoelectric effect</a>
+              <!-- <br />
+            <a href="http://"></a> -->
           </h2>
         </div>
       </div>
@@ -100,7 +117,6 @@
         <div class="labs">
           <h1>Second Year Labs</h1>
           <h2>
-            <br />
             <a href="http://de-iitr.vlabs.ac.in/exp/truth-table-gates"
               >Verification of Logics gate</a
             >
@@ -139,19 +155,33 @@
               >Construction of half/ full adder using XOR and NAND gates
             </a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp2/index.html">Verification of Norton Theorem</a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp3/index.html">Verification of Thevenin's Theorem</a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp4/index.html">Verification of Tellegen's Theorem</a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp5/index.html">Verification of Superposition Theorem</a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp18/index.html">Verification of Millman’s Theorem</a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp7/index.html">Three Phase Power Measurement</a>
             <br />
-            <a href="http://"> </a>
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp12/index.html">R-L-C Circuit Analysis</a>
+            <br />
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp15/index.html">Verification of Compensation Theorem</a>
+            <br />
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp1/index.html">Verification of Reciprocity Theorem</a>
+            <br />
+            <a href="http://vlabs.iitkgp.ernet.in/asnm/exp6/index.html">Verification of Maximum Power Transfer Theorem</a>
+            <br />
+            <a href="http:///vlabs.iitkgp.ernet.in/asnm/exp13/index.html"> Two-port network and verification of their interrelations</a>
+            <!-- <br />
+            <a href="http://"></a>
+            <br />
+            <a href="http://"></a>
+            <br />
+            <a href="http://"></a> -->
           </h2>
         </div>
       </div>
