feat: added active option to navbar

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       <h1 class="logo" src="logo.png">Techtronics</h1>
       <div class="other">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a class="active" href="about.html">About</a>
         <a href="labs.html"> Labs </a>
         <a href="project.html"> Projects </a>
         <a href="resource.html">Resources</a>
@@ -42,7 +42,7 @@
         <p>
           This website is created by
           <a href="https://www.linkedin.com/in/mohit-khairnar/" target="_blank"
-            >Mohit Khairnar</a
+            >Mohit Khairnar (Lead) </a
           >,
           <a
             href="https://www.linkedin.com/in/vinayak-chatterjee-b06331202/"
