--- a/index.html
+++ b/index.html
@@ -7,29 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <style>
-      .background--custom {
-        background-color: #FFFFFF;
-        width: 100vw;
-        height: 100vh;
-        position: absolute;
-        overflow: hidden;
-        z-index: -2;
-        top: 0;
-        left: 0;
-      }
-      canvas#canvas {
-        z-index: -1;
-        position: absolute;
-        width: 20%;
-        transform: rotate(0deg) scale(2) translateY(-2%);
-        --gradient-color-1: #DEEB05; 
-        --gradient-color-2: #FFE400; 
-        --gradient-color-3: #FFFF06;  
-        --gradient-color-4: #7960FF;
-        --gradient-speed: 0.000006;
-      }
-    </style>
+   
   </head>
 
   <body>
@@ -37,7 +15,7 @@
       <nav class="navigation-bar">
         <h1 class="logo" src="logo.png">Techtronics</h1>
         <div class="other" id="other">
-          <a href="index.html">Home</a>
+          <a class="active" href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="labs.html"> Labs </a>
           <a href="project.html"> Projects </a>
@@ -113,15 +91,4 @@
      
   </body>
 </html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-  
-  </head>
 
-  <body>
-  
-  
-  </body>
-</html>
