--- a/labs.html
+++ b/labs.html
@@ -20,7 +20,7 @@
       <div class="other">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="labs.html"> Labs </a>
+        <a class="active"  href="labs.html"> Labs </a>
         <a href="project.html"> Projects </a>
         <a href="resource.html">Resources</a>
       </div>
@@ -36,9 +36,7 @@
 
       <h1 class="text">1st year labs</h1>
       <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab corporis
-        tenetur ipsa voluptate, voluptatem maxime ea quae aliquam minima
-        voluptatum!
+        The labs in 1st year syllabus are quite easier, and basic to moderate level of undertstanding. It is similar to things that we have been studied earlier. Explore now.
       </p>
       <button id="lab1btn" class="btn">Explore</button>
     </div>
@@ -51,9 +49,7 @@
 
       <h1 class="text">2nd year labs</h1>
       <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab corporis
-        tenetur ipsa voluptate, voluptatem maxime ea quae aliquam minima
-        voluptatum!
+        The labs in 2nd year syllabus are mostly based on core ECE concepts and electrical engineering. They are of moderate to advanced level of understanding. Explore it now.
       </p>
       <button id="lab2btn" class="btn">Explore</button>
     </div>
