--- a/resource.html
+++ b/resource.html
@@ -7,7 +7,7 @@
     <meta name="google-signin-client_id" content="215861507846-gia515jbhncolvmb0nmifmuunhdo2rj4.apps.googleusercontent.com">
     <link rel="stylesheet" href="css/res.css" />
     <link rel="stylesheet" href="css/footer.css">
-    <!-- <link rel="stylesheet" href="css/index.css" /> -->
+    <link rel="stylesheet" href="css/index.css" />
     <title>Resources</title>
     
 </head>
@@ -20,7 +20,7 @@
           <a href="about.html">About</a>
           <a href="labs.html"> Labs </a>
           <a href="project.html"> Projects </a>
-          <a href="resource.html">Resources</a>
+          <a class="active"  href="resource.html">Resources</a>
         </div>
         <i class="fa fa-bars"></i>
     </nav>
